@@ -49,7 +49,7 @@ class Relation : public MapFeature
 		virtual void partChanged(MapFeature* F, int ChangeId);
 
 		QPainterPath getPath();
-		void buildPath(Projection const &theProjection, const QRegion& paintRegion);
+		void buildPath(Projection const &theProjection, const QRect& clipRect);
 
 		virtual QString toXML(int lvl=0, QProgressDialog * progress=NULL);
 		virtual bool toXML(QDomElement xParent, QProgressDialog & progress);
