@@ -18,7 +18,6 @@
  *   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
  ***************************************************************************/
 #include "wmsmapadapter.h"
-#include "Maps/Projection.h"
 
 WMSMapAdapter::WMSMapAdapter(WmsServer aServer)
  : theServer(aServer)
